Reolved most useful pmd recommendations